--- a/src/Avito/Hosts/Avito.Api/Avito.Api.csproj
+++ b/src/Avito/Hosts/Avito.Api/Avito.Api.csproj
@@ -6,6 +6,11 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
         <RootNamespace>WebApplication1</RootNamespace>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <DocumentationFile>Documentation.xml</DocumentationFile>
     </PropertyGroup>
 
     <ItemGroup>
