--- a/src/Avito/Hosts/Avito.Api/Avito.Api.csproj
+++ b/src/Avito/Hosts/Avito.Api/Avito.Api.csproj
@@ -23,4 +23,8 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\Contracts\Avito.Contracts\Avito.Contracts.csproj" />
+    </ItemGroup>
+
 </Project>
