--- a/src/Avito/Contracts/Avito.Contracts/Avito.Contracts.csproj
+++ b/src/Avito/Contracts/Avito.Contracts/Avito.Contracts.csproj
@@ -7,4 +7,8 @@
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\Domain\Avito.Domain\Avito.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
