--- a/src/Avito/Contracts/Avito.Contracts/Avito.Contracts.csproj
+++ b/src/Avito/Contracts/Avito.Contracts/Avito.Contracts.csproj
@@ -11,4 +11,8 @@
       <ProjectReference Include="..\..\Domain\Avito.Domain\Avito.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="12.0.0" />
+    </ItemGroup>
+
 </Project>
