--- a/src/Avito/Contracts/Avito.Contracts/Avito.Contracts.csproj
+++ b/src/Avito/Contracts/Avito.Contracts/Avito.Contracts.csproj
@@ -11,4 +11,11 @@
       <ProjectReference Include="..\..\Domain\Avito.Domain\Avito.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="7.0.0" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.0" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0" />
+    </ItemGroup>
+
 </Project>
