--- a/src/Avito/Hosts/Avito.Api/Avito.Api.csproj
+++ b/src/Avito/Hosts/Avito.Api/Avito.Api.csproj
@@ -14,6 +14,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="7.0.0" />
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.0" />
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     </ItemGroup>
 
@@ -25,6 +29,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\Contracts\Avito.Contracts\Avito.Contracts.csproj" />
+      <ProjectReference Include="..\..\Infrastructure\Avito.Registrar\Avito.Registrar.csproj" />
     </ItemGroup>
 
 </Project>
