--- a/src/Avito/Hosts/Avito.Api/appsettings.json
+++ b/src/Avito/Hosts/Avito.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "AdvertDb": "Server = localhost; Database=trunk_dictionary; uid=BaseTrade;password=postgres; TrustServerCertificate = true"
+    "PostgresAdvertDb": "Host = localhost;Database=PostgresAvitoDb БД;Username=postgres;Password=postgres;"
   },
   "Logging": {
     "LogLevel": {
