--- a/src/Avito/Hosts/Migrations/Migrations/Migrations.csproj
+++ b/src/Avito/Hosts/Migrations/Migrations/Migrations.csproj
@@ -11,13 +11,13 @@
       <PackageReference Include="ConfigurationBuilder" Version="1.0.0" />
       <PackageReference Include="EntityFramework" Version="6.4.4" />
       <PackageReference Include="EntityFramework6.Npgsql" Version="6.4.3" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="6.0.8" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.8">
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="7.0.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.0">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.8">
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.0">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
@@ -28,6 +28,10 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\..\Infrastructure\Avito.DataAccess\Avito.DataAccess.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="appsetings.json" />
     </ItemGroup>
 
 </Project>
