--- a/src/Avito/Hosts/Avito.Api/appsettings.json
+++ b/src/Avito/Hosts/Avito.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "PostgresAdvertDb": "Host = localhost;Database=PostgresAvitoDb БД;Username=postgres;Password=postgres;"
+    "PostgresAdvertDb": "Host = localhost;Database=AvitoAdvertDb;Username=postgres;Password=postgres"
   },
   "Logging": {
     "LogLevel": {
