--- a/src/Avito/Hosts/Migrations/Migrations/Migrations.csproj
+++ b/src/Avito/Hosts/Migrations/Migrations/Migrations.csproj
@@ -7,31 +7,37 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="ConfigMapFileProvider" Version="2.0.1" />
-      <PackageReference Include="ConfigurationBuilder" Version="1.0.0" />
-      <PackageReference Include="EntityFramework" Version="6.4.4" />
-      <PackageReference Include="EntityFramework6.Npgsql" Version="6.4.3" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="7.0.0" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.0">
-        <PrivateAssets>all</PrivateAssets>
-        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      </PackageReference>
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.0">
-        <PrivateAssets>all</PrivateAssets>
-        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      </PackageReference>
-      <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
-      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
-      <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="7.0.0" />
+        <PackageReference Include="ConfigMapFileProvider" Version="2.0.1"/>
+        <PackageReference Include="ConfigurationBuilder" Version="1.0.0"/>
+        <PackageReference Include="EntityFramework" Version="6.4.4"/>
+        <PackageReference Include="EntityFramework6.Npgsql" Version="6.4.3"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="7.0.0"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.0">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.0">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0"/>
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0"/>
+        <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="7.0.0"/>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\..\Infrastructure\Avito.DataAccess\Avito.DataAccess.csproj" />
+        <ProjectReference Include="..\..\..\Infrastructure\Avito.DataAccess\Avito.DataAccess.csproj"/>
     </ItemGroup>
 
     <ItemGroup>
-      <None Remove="appsetings.json" />
+        <Content Update="appsettins.json">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+        <None Remove="appsettings.json"/>
+        <Content Include="appsettings.json">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
     </ItemGroup>
 
 </Project>
