--- a/src/Avito/Hosts/Migrations/Migrations/appsettings.json
+++ b/src/Avito/Hosts/Migrations/Migrations/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "PostgresAdvertDb": "Host = localhost;Database=PostgresAvitoDb;Username=postgres;Password=postgres"
+    "PostgresAdvertDb": "Host= localhost;Database=AvitoAdvertDb;Username=postgres;Password=postgres"
   }
 }
